# Insurance-Price

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
experiments/: compare_models.py  investigate_negative_predictions.py
experiments/results/: negative_predictions.json  results.json
notebooks/: exploration.ipynb
src/insurance_price/: __init__.py  config.py  features.py  model.py  schemas.py  train.py
src/insurance_price/api/: app.py  deps.py  routes.py
src/insurance_price/db/: base.py  models.py  repository.py
src/insurance_price/static/: style.css
src/insurance_price/templates/: index.html  result.html
templates/: index.html  result.html
tests/: conftest.py  test_api.py  test_features.py  test_model.py  test_repository.py
